tests/fixtures/valid/spec_inheritance_resolver/cuda.etcm
spec CudaRuntime <- base.etcm:
  gpus: int = Field(default=1, gt=0)

impl default:
  device: "cuda"
  gpus: 2
