tests/fixtures/invalid/spec_cycle/b.etcm
spec B <- a.etcm:
  value: int = Field(default=1)
